[package]
name = "tstest"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
rodio = "0.19.0"
midir = "0.10.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
better-panic = "0.3.0"
human-panic = "2.0.2"
libc = "0.2.161"
strip-ansi-escapes = "0.2.0"
log = "0.4.22"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = "0.3.31"
tokio-util = { version = "0.7.12", features = ["rt"] }
